# RokaEngine

./: .gitignore  EngineCopy.bat  RendererCopy.bat  RokaProj.sln  RokaSTLCopy.bat  ScriptCopy.bat  ScriptExcludeList.txt  ScriptManager.h  TestCopy.bat  exclude_list.txt
GenericLib/: GenericLib.vcxproj  GenericManager.h  TestClass.h  framework.h  interface.cpp  interface.h
Network/: Network.vcxproj
OutputFile/Debug/: ScriptList.txt
Project/Engine/: CMeshRenderer.cpp  CMeshRenderer.h  CScript.cpp  CScript.h  Collider3D.cpp  Collider3D.h  Component.cpp  Component.h  Engine.vcxproj  Engine.vcxproj.filters  GameObject.h  RKEngine.cpp  RKEngine.h  RenderComponent.cpp  ScriptReLoad.cpp  ScriptReLoad.h  Transform.cpp  components.h  define.h  pch.cpp  pch.h
Project/GenericLib/: GenericLib.vcxproj  GenericLib.vcxproj.filters  GenericManager.cpp  GenericManager.h  TestClass.cpp  TestClass.h  interface.cpp  pch.h
Project/Network/: Network.vcxproj
Project/Renderer/: CDevice.cpp  CDevice.h  CDxDevice.cpp  CDxDevice.h  CGraphicsShader.cpp  CGraphicsShader.h  DxDevice.cpp  DxDevice.h  Entity.cpp  InnerDevice.cpp  Mesh.cpp  Mesh.h  Renderer.vcxproj  Renderer.vcxproj.filters  Resource.cpp  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  define.h  enums.h  external.cpp  external.h  global.fx  global.h  pch.h  std3D.fx  struct.h
Project/RokaProj/: CMakeLists.txt  CMakeMain.cpp  DllLoadTest.cpp  FileTimeStempMapMain.cpp  LruQueueMain.cpp  MainManager.cpp  (+26 more)
Project/Script/: CMakeLists.txt  CSecondScript.cpp  CSecondScript.h  CTestScript.cpp  CTestScript.h  Script.vcxproj  Script.vcxproj.filters  ScriptManager.cpp  ScriptManager.h  external.cpp  external.h  pch.h
Renderer/: Renderer.vcxproj
RokaProj/: RokaProj.vcxproj  RokaProj.vcxproj.filters  소스.cpp
(+31 files in other folders)
